--- a/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
+++ b/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -40,7 +40,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="15">
+              <Table columnCount="3" rowCount="16">
                 <Column editable="true" title="Title 1" type="java.lang.String">
                   <Data value="Ones"/>
                   <Data value="Twos"/>
@@ -56,6 +56,7 @@
                   <Data value="Small straight"/>
                   <Data value="Large straight"/>
                   <Data value="Chance"/>
+                  <Data value="Yathzee"/>
                   <Data value="Total"/>
                 </Column>
                 <Column editable="true" title="Player 1" type="java.lang.Integer"/>
@@ -149,11 +150,6 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/GUI/table2.jpg"/>
-        </Property>
-      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="0" width="780" height="620"/>
