--- a/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
+++ b/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
@@ -41,7 +41,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="16">
-                <Column editable="true" title="Title 1" type="java.lang.String">
+                <Column editable="false" title="Title 1" type="java.lang.String">
                   <Data value="Ones"/>
                   <Data value="Twos"/>
                   <Data value="Threes"/>
@@ -59,8 +59,8 @@
                   <Data value="Yathzee"/>
                   <Data value="Total"/>
                 </Column>
-                <Column editable="true" title="Player 1" type="java.lang.Integer"/>
-                <Column editable="true" title="Player 2" type="java.lang.Integer"/>
+                <Column editable="false" title="Player 1" type="java.lang.Integer"/>
+                <Column editable="false" title="Player 2" type="java.lang.Integer"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
