--- a/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
+++ b/NetworkingProjectYatzee/src/main/java/GUI/GUIGame.form
@@ -41,7 +41,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="16">
-                <Column editable="false" title="Title 1" type="java.lang.String">
+                <Column editable="false" title="Yahtzee" type="java.lang.String">
                   <Data value="Ones"/>
                   <Data value="Twos"/>
                   <Data value="Threes"/>
@@ -143,6 +143,10 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="ROLL"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="370" y="500" width="-1" height="-1"/>
